# mvdcim

./: .gitignore  Makefile  README.md  setup.cfg
mvdcim/: __init__.py  cli.py  mvdcim.py
tests/: test_dcim.py
