[bumpversion]
current_version = 0.0.1
tag-name = "v{new_version}"
tag-message = "Release {new_version}"
tag = True
commit = True

[metadata]
name = mvdcim
version = attr: mvdcim.__version__
description = move DCIM photo/video to destination using ssh/rsync
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >= 3.6
packages = find:
zip_safe = False
include_package_data = True
install_requires = 
	arrow
	click
	bumpversion

[options.extras_require]
test = 
	pytest
	pytest-click

[options.package_data]
* = 
	VERSION
	LICENSE

[options.entry_points]
console_scripts = 
	mvdcim = mvdcim.cli:mvdcim

[bumpversion:file:VERSION]

[bumpversion:file:mvdcim/__init__.py]
search = __version__='{current_version}'
replace = __version__='{new_version}'
